--- a/apps/mmp_geodesics/gtk/gl_view/gl_view.ui
+++ b/apps/mmp_geodesics/gtk/gl_view/gl_view.ui
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkVBox" id="gl_view_main_vbox">
     <property name="width_request">400</property>
     <property name="height_request">400</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <child>
-      <object class="GtkDrawingArea" id="gl_canvas">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="events">GDK_BUTTON_MOTION_MASK | GDK_BUTTON1_MOTION_MASK | GDK_BUTTON2_MOTION_MASK | GDK_BUTTON3_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK | GDK_SCROLL_MASK</property>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">0</property>
-      </packing>
-    </child>
     <child>
       <object class="GtkHBox" id="gl_canvas_controls_hbox">
         <property name="visible">True</property>
@@ -32,6 +21,7 @@
               <object class="GtkToolButton" id="save_frame_as_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Save Frame</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-save-as</property>
@@ -45,6 +35,7 @@
               <object class="GtkToggleToolButton" id="record_frames_toggle">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Record Frames</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-media-record</property>
@@ -68,14 +59,15 @@
               <object class="GtkToolItem" id="toolbutton2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
                 <child>
                   <object class="GtkCheckButton" id="show_pivot_checkbutton">
                     <property name="label" translatable="yes">_pivot</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="use_underline">True</property>
-                    <property name="xalign">0.5</property>
                     <property name="draw_indicator">True</property>
                   </object>
                 </child>
@@ -89,14 +81,15 @@
               <object class="GtkToolItem" id="toolbutton3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
                 <child>
                   <object class="GtkCheckButton" id="show_origin_checkbutton">
                     <property name="label" translatable="yes">_origin</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="use_underline">True</property>
-                    <property name="xalign">0.5</property>
                     <property name="draw_indicator">True</property>
                     <signal name="toggled" handler="on_coords_checkbutton_toggled" swapped="no"/>
                   </object>
@@ -121,6 +114,7 @@
               <object class="GtkMenuToolButton" id="render_target_toolmenu">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible_vertical">False</property>
                 <property name="label" translatable="yes">target</property>
                 <property name="stock_id">gtk-connect</property>
@@ -142,7 +136,8 @@
       <packing>
         <property name="expand">False</property>
         <property name="fill">True</property>
-        <property name="position">1</property>
+        <property name="pack_type">end</property>
+        <property name="position">0</property>
       </packing>
     </child>
   </object>
@@ -153,6 +148,7 @@
       <object class="GtkMenuItem" id="window_render_target_item">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="use_action_appearance">False</property>
         <property name="label" translatable="yes">window</property>
         <property name="use_underline">True</property>
       </object>
@@ -161,6 +157,7 @@
       <object class="GtkMenuItem" id="pixmap_window_target_item">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="use_action_appearance">False</property>
         <property name="label" translatable="yes">pixmap -&gt; window</property>
         <property name="use_underline">True</property>
       </object>
@@ -169,6 +166,7 @@
       <object class="GtkMenuItem" id="pixmap_render_target_item">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="use_action_appearance">False</property>
         <property name="label" translatable="yes">pixmap</property>
         <property name="use_underline">True</property>
       </object>
